--- a/src/layout/header/header.module.scss
+++ b/src/layout/header/header.module.scss
@@ -1,67 +1,103 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
+.container {
+    max-width: 1240px;
+    width: 100%;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
 
-.nav_flex{
-  display: flex;
-  justify-content: space-around;
-  margin-top: 0.5rem;
+
+.nav_flex {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 0.5rem;
 }
 
-.contacts{
-  display: flex;
-  gap: 60px;
-  align-items: center;
+.header_top {
+    width: 100%;
+    padding-bottom: 20px;
+    padding-top: 20px;
 }
 
-.contact{
-  display: flex;
-  align-items: center;
-  gap: 16px;
+.contacts {
+    display: flex;
+    gap: 60px;
+    align-items: center;
 }
 
-.search_btn{
-  display: flex;
-  align-items: center;
-  gap: 31px;
+.contact {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+}
+
+.search_btn {
+    display: flex;
+    align-items: center;
+    gap: 31px;
 }
 
 ul {
-  list-style: none;
+    list-style: none;
 }
 
 a {
-  text-decoration: none;
-  color: white;
+    text-decoration: none;
+    color: white;
+    font-family: 'Work Sans', sans-serif;
 }
 
 .nav {
-  display: flex;
-  gap: 20px;
+    display: flex;
+    gap: 20px;
+}
+
+.header_bottom {
+    background-color: #1f2b6c;
+    padding-top: 18px;
+    padding-bottom: 18px;
 }
 
 .navbar {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  gap: 20px;
-  background-color: #1f2b6c;
-  margin-top: 1rem;
-  width: 100%;
-  padding: 1.5rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+    width: 100%;
 }
 
 .header_btn {
-  cursor: pointer;
-  border: 1px solid transparent;
-  border-radius: 50px;
-  background: rgb(191, 210, 248);
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-  padding: 13px 35px 13px 35px;
+    cursor: pointer;
+    border: 1px solid transparent;
+    border-radius: 50px;
+    background: rgb(191, 210, 248);
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 13px 35px 13px 35px;
+}
+
+.contact p {
+    font-family: "work Sans", sans-serif;
+}
+
+.contact span {
+    font-family: 'Work Sans', sans-serif;
+    color: rgb(21, 158, 236);
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 19px;
+    letter-spacing: 0%;
+    text-align: left;
 }
