--- a/src/pages/services/services.module.css
+++ b/src/pages/services/services.module.css
@@ -58,4 +58,14 @@
   font-weight: 400;
   line-height: 22.4px;
   font-family: "Work Sans", sans-serif;
+}
+
+.Free {
+  margin-top: 35px;
+}
+
+.Services_free {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
 }/*# sourceMappingURL=services.module.css.map */
